Some small CSS and UI fixes to align the layout of CommunityData and ContactData Fix emojis in small icons

--- a/app/widgets/CommunityData/communitydata.css
+++ b/app/widgets/CommunityData/communitydata.css
@@ -1,5 +1,4 @@
 #community_data li:first-child img {
     height: 25rem;
     border-radius: 0.25rem;
-    margin-top: 1rem;
 }
