--- a/app/widgets/ContactData/contactdata.css
+++ b/app/widgets/ContactData/contactdata.css
@@ -1,6 +1,5 @@
 .contact_data li:first-child img {
     height: 25rem;
     border-radius: 0.25rem;
-    margin-top: 1rem;
     margin-left: 5rem;
 }
